accounts/deploy/kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts
  labels:
    app: sro-accounts
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sro-accounts
      version: v1
  template:
    metadata:
      labels:
        app: sro-accounts
        version: v1
    spec:
      containers:
        - name: accounts
          image: 779965382548.dkr.ecr.us-east-1.amazonaws.com/sro/accounts:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: jwt-certs
              mountPath: "/etc/sro/auth/"
              readOnly: true
            - name: sro-db
              mountPath: "/etc/sro/"
              readOnly: true
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: jwt-certs
          secret:
            secretName: jwt-certs
            items:
              - key: jwt.key
                path: key
              - key: jwt.key.pub
                path: key.pub
        - name: sro-db
          secret:
            secretName: database
---
apiVersion: v1
kind: Service
metadata:
  name: accounts
  labels:
    app: accounts
    service: accounts
spec:
  type: ClusterIP
  selector:
    app: accounts
    version: v1
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
